--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://sujithmu.github.io/Vehicle-Info/",
   "name": "react-crud-material-ui-app",
   "version": "0.1.0",
   "private": true,
@@ -31,6 +32,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+	"predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
@@ -59,6 +62,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
     "enzyme-to-json": "^3.6.2",
+    "gh-pages": "^6.0.0",
     "jest": "^29.6.4",
     "jest-react-hooks-shallow": "^1.5.1"
   }
